# BuildVersionExample

./: .gitignore  CMakeLists.txt  README.md  config.cmake
.devcontainer/: Dockerfile
inc/: build_version.hpp
src/: CMakeLists.txt  main.cpp
